--- a/Training.csproj
+++ b/Training.csproj
@@ -143,6 +143,7 @@
   <ItemGroup>
     <None Include="descriptor.json" />
     <None Include="packages.config" />
+    <None Include="README.md" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(TemplateBuilderTargets)" Condition="Exists('$(TemplateBuilderTargets)')" Label="TemplateBuilder" />
