--- a/Training.csproj
+++ b/Training.csproj
@@ -39,6 +39,13 @@
     <Reference Include="Common.Logging.Core">
       <HintPath>..\..\..\..\bin\Common.Logging.Core.dll</HintPath>
     </Reference>
+    <Reference Include="ForeignExchange, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>Assemblies\ForeignExchange\ForeignExchange.dll</HintPath>
+    </Reference>
+    <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>packages\Newtonsoft.Json.12.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.ServiceModel" />
     <Reference Include="System.ServiceModel.Activation" />
@@ -50,6 +57,10 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
+    <Reference Include="Terrasoft.Common, Version=7.15.2.501, Culture=neutral, PublicKeyToken=edaadfbc3b0bb879, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\..\bin\Terrasoft.Common.dll</HintPath>
+    </Reference>
     <Reference Include="Terrasoft.Core, Version=7.15.2.501, Culture=neutral, PublicKeyToken=edaadfbc3b0bb879, processorArchitecture=MSIL">
       <HintPath>packages\CreatioSDK.7.15.2.501\lib\net40\Terrasoft.Core.dll</HintPath>
     </Reference>
@@ -128,11 +139,15 @@
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
+    <Compile Include="Files\cs\DemoService.cs" />
+    <Compile Include="Files\cs\ExpenseReportLinesListener.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <!-- ##BpmonlineSDKMarker## -->
   <ItemGroup>
-    <Compile Include="Files\cs\*.cs" />
+    <Compile Include="Files\cs\EL_Contact.cs" />
+    <Compile Include="Files\cs\EmptyClass.cs" />
+    <Compile Include="Files\cs\MsgChannelUtilities.cs" />
     <Content Include="Assemblies\**\*.*" />
     <Content Include="Data\**\*.*" />
     <Content Include="Resources\**\*.*" />
@@ -141,6 +156,7 @@
   </ItemGroup>
   <!-- ##BpmonlineSDKMarker## -->
   <ItemGroup>
+    <None Include="app.config" />
     <None Include="descriptor.json" />
     <None Include="packages.config" />
     <None Include="README.md" />
